app-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  labels:
    app: back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-deployment
  template:
    metadata:
      labels:
        app: back-deployment
    spec:
      imagePullSecrets:
      - name: myregistrykey
      containers:
        - name: backend
          image: hamdinh98/olympiqs-repo:core
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: back-deployment
  ports:
    - port: 4001
      targetPort: 4001
      protocol: TCP
