app-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-deployment
  template:
    metadata:
      labels:
        app: mongo-deployment
    spec:
      imagePullSecrets:
      - name: myregistrykey
      containers:
        - name: database
          image: mongo
          ports:
            - containerPort: 27019
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo-service
spec:
  selector:
    app: mongo-deployment
  ports:
    - port: 27019
      targetPort: 27019
      protocol: TCP
