app-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-deployment
  template:
    metadata:
      labels:
        app: front-deployment
    spec:
      imagePullSecrets:
      - name: myregistrykey
      containers:
      - name: frontend
        image: hamdinh98/olympiqs-repo:web
        ports:
          - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  selector:
    app: front-deployment
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
