app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-deployment
  template:
    metadata:
      labels:
        app: front-deployment
    spec:
      containers:
      - name: frontend
        image: hamdinh98/olympiqs-repo:web
        ports:
          - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  labels:
    app: back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-deployment
  template:
    metadata:
      labels:
        app: back-deployment
    spec:
      containers:
      - name: backend
        image: hamdinh98/olympiqs-repo:web
        ports:
          - containerPort: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-deployment
  template:
    metadata:
      labels:
        app: mongo-deployment
    spec:
      containers:
      - name: database
        image: mongo
        ports:
          - containerPort: 27019
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  selector:
    app: front-deployment
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: back-deployment
  ports:
  - port: 4001
    targetPort: 4001
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo-service
spec:
    selector:
      app: mongo-deployment
    ports:
    - port: 27019
      targetPort: 27019
      protocol: TCP
